k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openemr-service
  namespace: openemr
  labels:
    app: openemr
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "${BACKEND_PROTOCOL}"
    # SSL annotations - enabled by deploy script when SSL_CERT_ARN is provided
#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "${SSL_CERT_ARN}"
#    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: "ELBSecurityPolicy-TLS-1-2-2017-01"
spec:
  type: LoadBalancer
  ports:
  # if ACM certificate is specified: HTTPS port 443 with SSL re-encryption: ACM cert at NLB, self-signed cert to pod
  # if ACM certificate is not specified: HTTPS port 443 terminates SSL at the container using self-signed cert.
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: openemr
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
